<resources>
    <string name="app_name">SpectralAnalyzer</string>
    <string name="find_periods_btn">Find Periods</string>
    <string name="btn_zoom_in">+</string>
    <string name="btn_zoom_out">-</string>

    <string name="btn_record_point1">Record Point 1</string>
    <string name="btn_record_point2">Record Point 2</string>
    <string name="btn_record_point3">Record Point 3</string>
    <string name="btn_record_point4">Record Point 4</string>
    <string name="btn_record_point5">Record Point 5</string>

    <string name="btn_submit">Submit</string>
    <string name="sample_rate">Sample rate:</string>
    <string name="_22050_hz">22050 Hz</string>
    <string name="_8000_hz">8000 Hz</string>
    <string name="recording_time">Recording time:</string>
    <string name="start_point_recording_time">00:00:00</string>
    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="minimum_duration">Min Sound Duration:</string>
    <string name="minimum_duration_default_value">1 sec</string>
    <string name="noise_value">Noise value:</string>
    <string name="noise_value_default_value">0</string>
    <string name="save_settings_btn_text">Save changes</string>
    <string name="action_settings">Settings</string>
    <string name="start_session">Start new session</string>
    <string name="reset_btn_text">Reset</string>
    <string name="process_btn_text">Process</string>
    <string name="max_silence_length">Max Silent Length:</string>
    <string name="ms">ms</string>
    <string name="sec">sec</string>
    <string name="addRecordText">Add Record</string>
    <string name="start_process_text">Start Process</string>
    <string name="item_name_here">Item name here</string>
    <string name="no_data">No Records found. Click Add Record button</string>


    <string name="show_transcription_item">Show transcriptions</string>

</resources>
