<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" android:padding="10dp" android:measureWithLargestChild="false"
              android:gravity="center_vertical|center_horizontal">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:padding="5dp" android:layout_marginBottom="0dp"
            >
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/minimum_duration"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sec"
                android:id="@+id/minSoundDurationView"/>
    </LinearLayout>
    <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/minSoundDurationSeekBar"
            android:progress="2"
            android:longClickable="false"
            android:max="40"
            android:layout_marginTop="5dp"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp"
                  android:layout_marginBottom="0dp"
                  android:layout_marginTop="50dp">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/max_silence_length"
                  android:layout_weight="1"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/ms"
                  android:id="@+id/maxSilenceLengthView"/>
    </LinearLayout>

    <SeekBar android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/MaxSilenceLengthSeekBar"
             android:progress="4"
             android:max="100"
             android:layout_marginTop="5dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:padding="5dp"
            android:layout_marginTop="50dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/noise_value"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/noiseValueView"
                android:layout_weight="0"/>
    </LinearLayout>

    <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noiseValueSeekBar"
            android:layout_marginTop="10dp"
            android:progress="0"
            android:max="1000"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="25dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_btn_text"
                android:id="@+id/resetSettingsButton"
                android:layout_weight="0"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_settings_btn_text"
                android:id="@+id/saveSettingsButton"
                android:layout_weight="5"/>
    </LinearLayout>
</LinearLayout>