<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context=".activity.StartupActivityDEMO">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_record_point1"
                android:id="@+id/btnStartRecord1"
                android:layout_weight="2"
            android:onClick="handleRecordAction" />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxStatusRecord1"
                android:enabled="false"
                android:layout_weight="0.1"
                android:checked="false"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_record_point2"
                android:id="@+id/btnStartRecord2"
                android:layout_weight="2"
            android:onClick="handleRecordAction" />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxStatusRecord2"
                android:enabled="false"
                android:layout_weight="0.1"
                android:checked="false"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_record_point3"
                android:id="@+id/btnStartRecord3"
                android:layout_weight="2"
            android:onClick="handleRecordAction" />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxStatusRecord3"
                android:enabled="false"
                android:layout_weight="0.1"
                android:checked="false"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_record_point4"
                android:id="@+id/btnStartRecord4"
                android:layout_weight="2"
            android:onClick="handleRecordAction" />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxStatusRecord4"
                android:enabled="false"
                android:layout_weight="0.1"
                android:checked="false"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_record_point5"
                android:id="@+id/btnStartRecord5"
                android:layout_weight="2"
            android:onClick="handleRecordAction" />
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxStatusRecord5"
                android:enabled="false"
                android:layout_weight="0.1"
                android:checked="false"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btnSubmit" android:onClick="submitRequest"/>


</LinearLayout>