<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" android:padding="5dp">
        <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/listView"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:divider="#c06b6b"/>
        <TextView
                android:id="@+id/list_empty"
                android:text="@string/no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addRecordText"
                android:id="@+id/addRecordBtn"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_process_text"
                android:id="@+id/processAudioBtn"
                android:layout_gravity="top"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"/>
    </RelativeLayout>
</LinearLayout>